// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Carousel /> by default on desktop matches with snapshot 1`] = `
<div
  className="sc-htoDjs hVJjTH k-Carousel"
>
  <div
    className="sc-EHOje hDKIby k-Carousel__inner"
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="sc-bZQynM kqBCSz k-Carousel__inner__pageContainer"
      onClick={[Function]}
    >
      <div
        className="sc-bxivhb kDJnMy k-Carousel__page"
      >
        <div
          className="sc-ifAKCX hopHbK k-Carousel__page__item"
        >
          <div
            className="k-ProjectCard k-Card k-Card--light"
            href={null}
            title={null}
          >
            <div
              className="k-ProjectCard__grid"
            >
              <div
                className="sc-cSHVUG boNkBY k-ProjectCard__grid--flex"
              >
                <span
                  className="k-ButtonImage k-ButtonImage--withoutPointerEvents"
                  tabIndex={null}
                >
                  <img
                    alt=""
                    className="k-ButtonImage__img"
                    src={null}
                  />
                </span>
                <p
                  className="k-Paragraph k-ProjectCard__grid--flex__item-fluid k-u-margin-left-single k-u-margin-right-single k-Paragraph--quaternary k-Paragraph--withoutMargin k-Paragraph--normalLineHeight"
                >
                  <span
                    className="k-u-weight-regular"
                  >
                    Name
                  </span>
                </p>
              </div>
              <div
                className="sc-cSHVUG ldCoYX k-ProjectCard__grid--flex"
              >
                <p
                  className="sc-kAzzGY fvFcA k-ProjectCard__grid--flex__item-fluid k-Card__title"
                >
                  A
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="sc-ifAKCX kXmzYc k-Carousel__page__item"
        />
        <div
          className="sc-ifAKCX kXmzYc k-Carousel__page__item"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Carousel /> by default on mobile matches with snapshot 1`] = `
<div
  className="sc-htoDjs hVJjTH k-Carousel"
>
  <div
    className="sc-EHOje hDKIby k-Carousel__inner"
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="sc-bZQynM kqBCSz k-Carousel__inner__pageContainer"
      onClick={[Function]}
    >
      <div
        className="sc-bxivhb kDJnMy k-Carousel__page"
      >
        <div
          className="sc-ifAKCX hopHbK k-Carousel__page__item"
        >
          <div
            className="k-ProjectCard k-Card k-Card--light"
            href={null}
            title={null}
          >
            <div
              className="k-ProjectCard__grid"
            >
              <div
                className="sc-cSHVUG boNkBY k-ProjectCard__grid--flex"
              >
                <span
                  className="k-ButtonImage k-ButtonImage--withoutPointerEvents"
                  tabIndex={null}
                >
                  <img
                    alt=""
                    className="k-ButtonImage__img"
                    src={null}
                  />
                </span>
                <p
                  className="k-Paragraph k-ProjectCard__grid--flex__item-fluid k-u-margin-left-single k-u-margin-right-single k-Paragraph--quaternary k-Paragraph--withoutMargin k-Paragraph--normalLineHeight"
                >
                  <span
                    className="k-u-weight-regular"
                  >
                    Name
                  </span>
                </p>
              </div>
              <div
                className="sc-cSHVUG ldCoYX k-ProjectCard__grid--flex"
              >
                <p
                  className="sc-kAzzGY fvFcA k-ProjectCard__grid--flex__item-fluid k-Card__title"
                >
                  A
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="sc-ifAKCX bQahgl k-Carousel__page__item"
        />
        <div
          className="sc-ifAKCX bQahgl k-Carousel__page__item"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Carousel /> with loop prop on desktop matches with snapshot 1`] = `
<div
  className="sc-htoDjs hVJjTH k-Carousel"
>
  <div
    className="sc-EHOje hDKIby k-Carousel__inner"
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="sc-bZQynM kqBCSz k-Carousel__inner__pageContainer"
      onClick={[Function]}
    >
      <div
        className="sc-bxivhb kDJnMy k-Carousel__page"
      >
        <div
          className="sc-ifAKCX hopHbK k-Carousel__page__item"
        >
          <div
            className="k-ProjectCard k-Card k-Card--light"
            href={null}
            title={null}
          >
            <div
              className="k-ProjectCard__grid"
            >
              <div
                className="sc-cSHVUG boNkBY k-ProjectCard__grid--flex"
              >
                <span
                  className="k-ButtonImage k-ButtonImage--withoutPointerEvents"
                  tabIndex={null}
                >
                  <img
                    alt=""
                    className="k-ButtonImage__img"
                    src={null}
                  />
                </span>
                <p
                  className="k-Paragraph k-ProjectCard__grid--flex__item-fluid k-u-margin-left-single k-u-margin-right-single k-Paragraph--quaternary k-Paragraph--withoutMargin k-Paragraph--normalLineHeight"
                >
                  <span
                    className="k-u-weight-regular"
                  >
                    Name
                  </span>
                </p>
              </div>
              <div
                className="sc-cSHVUG ldCoYX k-ProjectCard__grid--flex"
              >
                <p
                  className="sc-kAzzGY fvFcA k-ProjectCard__grid--flex__item-fluid k-Card__title"
                >
                  A
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="sc-ifAKCX kXmzYc k-Carousel__page__item"
        />
        <div
          className="sc-ifAKCX kXmzYc k-Carousel__page__item"
        />
      </div>
    </div>
  </div>
</div>
`;
